--- a/{{cookiecutter.project_slug}}/examples/local/config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/local/config.yaml
@@ -2,10 +2,9 @@
 batch_size: 32
 optimizer: adam
 patience: 5
-architecture: fake_model
+architecture: my_model
 max_epoch: 99
 exp_name: my_exp_1
 
 # architecture
-dropout: 0.5
 size: 10
