--- a/{{cookiecutter.project_slug}}/examples/slurm_mila_orion/config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/slurm_mila_orion/config.yaml
@@ -2,10 +2,9 @@
 batch_size: 32
 optimizer: adam
 patience: 5
-architecture: fake_model
+architecture: my_model
 max_epoch: 99
 exp_name: my_exp_1
 
 # architecture
-dropout: 0.5
-size: 'orion~uniform(1,10,discrete=True)'
+size: 'orion~uniform(1,100,discrete=True)'
