--- a/{{cookiecutter.project_slug}}/examples/local_orion/orion_config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/local_orion/orion_config.yaml
@@ -1,6 +1,14 @@
-max_trials: 1
-working_dir: orion_working_dir
-algorithms: random
-name: my_exp
-non_monitored_arguments: [saved_model]
-ignore_code_changes: True
+experiment:
+  name:
+    my_exp
+  max_trials: 1
+  working_dir:
+    orion_working_dir
+  algorithm:
+    random
+evc:
+  non_monitored_arguments:
+    - output
+    - data
+  ignore_code_changes:
+    true
