--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,4 @@ jobs:
   include:
     - script: ./tests/end2end_pytorch/run.sh
     - script: ./tests/end2end_tensorflow/run.sh
+    - script: ./tests/test_docs/run.sh
