--- a/{{cookiecutter.project_slug}}/examples/slurm_mila_orion/orion_config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/slurm_mila_orion/orion_config.yaml
@@ -3,7 +3,7 @@ experiment:
     my_exp
   max_trials: 2
   working_dir:
-    ../orion_working_dir
+    orion_working_dir
   algorithm:
     random
 evc:
