added seed to orion

--- a/{{cookiecutter.project_slug}}/examples/local_orion/orion_config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/local_orion/orion_config.yaml
@@ -4,8 +4,9 @@ experiment:
   max_trials: 2
   working_dir:
     orion_working_dir
-  algorithm:
-    random
+  algorithms:
+    random:
+      seed: 1234
 evc:
   non_monitored_arguments:
     - output
