--- a/{{cookiecutter.project_slug}}/examples/local_orion/orion_config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/local_orion/orion_config.yaml
@@ -1,11 +1,12 @@
 experiment:
   name:
     my_exp
-  max_trials: 1
+  max_trials: 2
   working_dir:
     orion_working_dir
-  algorithm:
-    random
+  algorithms:
+    random:
+      seed: 1234
 evc:
   non_monitored_arguments:
     - output
