--- a/{{cookiecutter.project_slug}}/examples/slurm_mila_orion/orion_config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/slurm_mila_orion/orion_config.yaml
@@ -4,11 +4,13 @@ experiment:
   max_trials: 2
   working_dir:
     orion_working_dir
-  algorithm:
-    random
+  algorithms:
+    random:
+      seed: 1234
 evc:
   non_monitored_arguments:
     - output
     - data
+    - tmp-folder
   ignore_code_changes:
     true
