removing codecov from cookeicutter.

--- a/{{cookiecutter.project_slug}}/.travis.yml
+++ b/{{cookiecutter.project_slug}}/.travis.yml
@@ -10,7 +10,4 @@ script:
   # run flake8 with exactly the same options as in the commit hook:
   - config/hooks/pre-commit
   # run tests and compute the coverage
-  - pytest --cov=./ --cov-report xml
-after_success:
-  # send coverage to codecov
-  - bash <(curl -s https://codecov.io/bash)
+  - pytest
