--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,16 @@
-name: test_instantiated_projects
+name: unit-tests
 on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
   push:
     branches:
       - master
-      - develop
   pull_request:
     branches:
       - master
-      - develop
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: python-3.7
@@ -21,17 +19,17 @@ jobs:
         python-version: 3.7
     - name: install-dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install -e .
-    - name: end2end-pytorch
+    - name: print env
       run: |
-        cd tests/end2end_pytorch
-        sh run.sh
-    - name: end2end-tensorflow
+        env
+    - name: pytorch-test
       run: |
-        cd tests/end2end_tensorflow
-        sh run.sh
-    - name: docs
+        ./tests/end2end_pytorch/run.sh
+    - name: tensorflow-test
       run: |
-        cd tests/test_docs
-        sh run.sh
-
+        ./tests/end2end_tensorflow/run.sh
+    - name: doc-creation-test
+      run: |
+        ./tests/test_docs/run.sh
