Fixups for the lightning_and_keras PR (#12) (#22)
* Update torch model to pl-lightning model

* Refactor train+model impl w/ optim module

* Refactor data loader w/ data module for plightning

* removing codecov from cookeicutter. (#24)

* moving to github actions (#25)

* removing coverage computation

* moving from travis to gitbug actions.

* setting fake name/email for git.

* removed (not-correct) duplicate for github actions config file.

* fixing tests.

* refactored pytorch models. (#26)

Co-authored-by: Mirko Bronzi <m.bronzi@gmail.com>

--- a/{{cookiecutter.project_slug}}/.travis.yml
+++ b/{{cookiecutter.project_slug}}/.travis.yml
@@ -5,12 +5,8 @@ cache: pip
 install:
   # Reducing verbosity is needed because of Travis' limit on log length
   - pip install -e . --quiet
-  - pip install pytest-cov
 script:
   # run flake8 with exactly the same options as in the commit hook:
   - config/hooks/pre-commit
   # run tests and compute the coverage
-  - pytest --cov=./ --cov-report xml
-after_success:
-  # send coverage to codecov
-  - bash <(curl -s https://codecov.io/bash)
+  - pytest
