--- a/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: python-{{ cookiecutter.version }}
+    - name: python-{{ cookiecutter.python_version }}
       uses: actions/setup-python@v2
       with:
-        python-version: {{ cookiecutter.version }}
+        python-version: {{ cookiecutter.python_version }}
     - name: install-dependencies
       run: |
         python -m pip install --upgrade pip
