Adding more CI backends. (#27)
* added github actions.

* moved python version to 3.9 - by default.

* added support for azure continuous integration.

* updated mlflox/orion dependencies.

--- a/{{cookiecutter.project_slug}}/.travis.yml
+++ b/{{cookiecutter.project_slug}}/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - "3.7"
+  - "{{ cookiecutter.python_version }}"
 cache: pip
 install:
   # Reducing verbosity is needed because of Travis' limit on log length
