--- a/{{cookiecutter.project_slug}}/.travis.yml
+++ b/{{cookiecutter.project_slug}}/.travis.yml
@@ -9,4 +9,4 @@ script:
   # run flake8 with exactly the same options as in the commit hook:
   - config/hooks/pre-commit
   # run tests and compute the coverage
-  - pytest
+  - pytest --cov={{cookiecutter.project_slug}}
