--- a/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
     - name: flake8
       run: |
           pip install flake8
-          config/hooks/pre-commit
+          hooks/pre-commit
     - name: install-dependencies
       run: |
         pip install pytest
