--- a/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
         python -m pip install --upgrade pip
     - name: flake8
       run: |
-          pip install flake8
+          pip install flake8==4.0.1 flake8-docstrings==1.6.0
           config/hooks/pre-commit
     - name: install-dependencies
       run: |
