--- a/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
@@ -19,14 +19,17 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: {{ cookiecutter.python_version }}
-    - name: install-dependencies
+    - name: upgrade-pip
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install -e .
     - name: flake8
       run: |
-        config/hooks/pre-commit
+          pip install flake8==4.0.1 flake8-docstrings==1.6.0
+          config/hooks/pre-commit
+    - name: install-dependencies
+      run: |
+        pip install pytest
+        pip install -e .
     - name: print env
       run: |
         env
