--- a/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
     - name: flake8
       run: |
           pip install flake8==4.0.1 flake8-docstrings==1.6.0
-          config/hooks/pre-commit
+          hooks/pre-commit
     - name: install-dependencies
       run: |
         pip install pytest
