Change name of target branch from develop to development

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,11 @@ on:
   push:
     branches:
       - master
-      - develop
+      - development
   pull_request:
     branches:
       - master
-      - develop
+      - development
 jobs:
   build:
     runs-on: ubuntu-latest
