--- a/{{cookiecutter.project_slug}}/examples/local_orion/config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/local_orion/config.yaml
@@ -2,8 +2,6 @@
 batch_size: 32
 optimizer: adam
 loss: L1
-patience: 5
-architecture: my_model
 max_epoch: 99
 exp_name: my_exp_1
 # set to null to avoid setting a seed (can speed up GPU computation, but
@@ -11,4 +9,11 @@ exp_name: my_exp_1
 seed: 1234
 
 # architecture
-size: 'orion~uniform(1,10,discrete=True)'
+size: 'orion~uniform(1,100,discrete=True)'
+architecture: my_model
+
+# early stopping
+early_stopping:
+  metric: val_loss
+  mode: min
+  patience: 5
