--- a/{{cookiecutter.project_slug}}/examples/local/config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/local/config.yaml
@@ -1,7 +1,7 @@
 # general
 batch_size: 32
 optimizer: adam
-loss: L1
+loss: cross-entropy
 max_epoch: 99
 exp_name: my_exp_1
 # set to null to avoid setting a seed (can speed up GPU computation, but
