--- a/{{cookiecutter.project_slug}}/examples/local_orion/config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/local_orion/config.yaml
@@ -1,19 +1,20 @@
 # general
 batch_size: 32
 optimizer: adam
-loss: L1
-max_epoch: 99
+loss: cross_entropy
+max_epoch: 5
 exp_name: my_exp_1
 # set to null to avoid setting a seed (can speed up GPU computation, but
 # results will not be reproducible)
 seed: 1234
 
 # architecture
-size: 'orion~uniform(1,100,discrete=True)'
-architecture: my_model
+num_classes: 10
+architecture: simple_mlp
+hidden_dim: 'orion~uniform(32,256,discrete=True)'
 
 # early stopping
 early_stopping:
   metric: val_loss
   mode: min
-  patience: 5
+  patience: 3
