--- a/{{cookiecutter.project_slug}}/examples/local/config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/local/config.yaml
@@ -4,6 +4,7 @@ optimizer: adam
 loss: cross_entropy
 max_epoch: 5
 exp_name: my_exp_1
+num_workers: 0
 # set to null to avoid setting a seed (can speed up GPU computation, but
 # results will not be reproducible)
 seed: 1234
