--- a/{{cookiecutter.project_slug}}/examples/local/config.yaml
+++ b/{{cookiecutter.project_slug}}/examples/local/config.yaml
@@ -1,19 +1,21 @@
 # general
 batch_size: 32
 optimizer: adam
-loss: L1
-max_epoch: 99
+loss: cross_entropy
+max_epoch: 5
 exp_name: my_exp_1
+num_workers: 0
 # set to null to avoid setting a seed (can speed up GPU computation, but
 # results will not be reproducible)
 seed: 1234
 
 # architecture
-size: 10
-architecture: my_model
+hidden_dim: 256
+num_classes: 10
+architecture: simple_mlp
 
 # early stopping
 early_stopping:
   metric: val_loss
   mode: min
-  patience: 5
+  patience: 3
