add main branch for default ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,12 @@ on:
   # but only for the main branch
   push:
     branches:
+      - main
       - master
       - development
   pull_request:
     branches:
+      - main
       - master
       - development
 jobs:
