ignore outputs in examples folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .idea
 mlruns
 
+examples/data/
+examples/*/output/
+examples/*/lightning_logs/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
