--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     - name: linting checks
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 flake8-docstrings
+        pip install flake8 flake8-docstrings isort
         sh hooks/pre-commit
     - name: install project dependencies
       run: |
