--- a/examples/local_orion/config.yaml
+++ b/examples/local_orion/config.yaml
@@ -4,14 +4,15 @@ optimizer: adam
 loss: cross_entropy
 max_epoch: 5
 exp_name: my_exp_1
+num_workers: 0
 # set to null to avoid setting a seed (can speed up GPU computation, but
 # results will not be reproducible)
 seed: 1234
 
 # architecture
+hidden_dim: 'orion~uniform(32,256,discrete=True)'
 num_classes: 10
 architecture: simple_mlp
-hidden_dim: 'orion~uniform(32,256,discrete=True)'
 
 # early stopping
 early_stopping:
