--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ examples/*/output*/
 examples/*/orion_working_dir*/
 examples/*/lightning_logs/
 examples/*/orion_db.pkl
+merged_config.yaml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
