--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,31 +14,34 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: python-3.11
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.11
+    - uses: actions/checkout@v4
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
+
+    - name: Set up Python
+      run: uv python install 3.11
+
     - name: linting checks
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 flake8-docstrings isort
+        uv pip install flake8 flake8-docstrings isort
         sh hooks/pre-commit
-    - name: install project dependencies
-      run: |
-        pip install -e .
+
+    - name: Install the project
+      run: uv sync --all-extras --dev
+
     - name: unit tests
       run: |
-        pytest --cov=amlrt-project
+        uv run pytest --cov=amlrt-project
     - name: pytorch-end2end-single
       run: |
-        ./tests/end2end_pytorch/run_single.sh
+        uv run ./tests/end2end_pytorch/run_single.sh
     - name: pytorch-end2end-orion
       run: |
-        ./tests/end2end_pytorch/run_orion.sh
+        uv run ./tests/end2end_pytorch/run_orion.sh
     - name: type checking
       run: |
-        pytype amlrt_project/
+        uv run pytype amlrt_project/
     - name: doc-creation-test
       run: |
-        ./tests/test_docs/run.sh
+        uv run ./tests/test_docs/run.sh
